force-app/main/default/objects/DripCampaign__c/fields/BccAddress__c.field-meta.xml
<CustomField>
    <fullName>BccAddress__c</fullName>
    <description>A json array of email addresses for recipients who should receive a blind carbon copy of the email message.</description>
    <label>BCC Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>