force-app/main/default/objects/DripCampaign__c/fields/CopyFromTemplate__c.field-meta.xml
<CustomField>
    <fullName>CopyFromTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, copies any data and Drip Email Templates from a Drip Campaign Template into a new Drip Campaign, if the &apos;Drip Campaign Template&apos; field is set.</description>
    <label>Copy From Template</label>
    <type>Checkbox</type>
</CustomField>