force-app/main/default/objects/DripCampaign__c/fields/DripCampaignTemplate__c.field-meta.xml
<CustomField>
    <fullName>DripCampaignTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drip Campaign Template</label>
    <referenceTo>DripCampaignTemplate__c</referenceTo>
    <relationshipLabel>Drip Campaigns</relationshipLabel>
    <relationshipName>DripCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>