force-app/main/default/objects/DripCampaign__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <description>The total number of processed Drip Emails for the Drip Campaign.</description>
    <inlineHelpText>The total number of processed Drip Emails for the Drip Campaign.</inlineHelpText>
    <label>Processed</label>
    <summaryFilterItems>
        <field>DripEmail__c.Status__c</field>
        <operation>equals</operation>
        <value>processed</value>
    </summaryFilterItems>
    <summaryForeignKey>DripEmail__c.DripCampaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>