force-app/main/default/objects/DripCampaign__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Drip Campaigns</relationshipLabel>
    <relationshipName>DripCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>