force-app/main/default/objects/DripCampaign__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>The total number of Drip Emails for this Drip Campaign.</description>
    <inlineHelpText>The total number of Drip Emails for this Drip Campaign.</inlineHelpText>
    <label>Total</label>
    <summaryForeignKey>DripEmail__c.DripCampaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>