force-app/main/default/objects/DripCampaign__c/listViews/All_Drip_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Drip_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>isPaused__c</columns>
    <columns>StartDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Drip Campaigns</label>
</ListView>