force-app/main/default/objects/DripCampaign__c/listViews/My_Drip_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Drip_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>isPaused__c</columns>
    <columns>StartDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Drip Campaigns</label>
</ListView>